--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">My Application</string>
+    <string name="title_activity_batch_list">BatchListActivity</string>
+    <string name="title_activity_detail">Detail</string>
 </resources>
